<resources>
    <string name="app_name">Pharmapp</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Carrito de Compra</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="visor_imagen">Visor Imagen</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="nombremedicamento">Nombre del Medicamento</string>
    <string name="descripcion">Descripción</string>
    <string name="comprimidos">Comprimidos</string>
    <string name="Pharmapp">Pharmapp</string>
    <string name="precio">Precio</string>
    <string name="total">Total</string>
    <string name="buscador">¿Que desea buscar?</string>

    <string name="URL_medicamentos">http://192.168.0.87/medicamentos_android/db.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>