<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pharmapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detalle"
            app:destination="@id/nav_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pharmapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_self"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_gallery_to_nav_visor_receta"
            app:destination="@id/nav_visor_receta" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pharmapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_detalle"
        android:name="com.example.pharmapp.ui.home.DetalleMedicamento"
        android:label="@string/Pharmapp"
        tools:layout="@layout/fragment_detalle_medicamento" >
        <action
            android:id="@+id/action_nav_detalle_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_visor_receta"
        android:name="com.example.pharmapp.ui.gallery.VisorRecetaFragment"
        android:label="@string/visor_imagen"
        tools:layout="@layout/fragment_visor_receta" >
        <action
            android:id="@+id/action_nav_visor_receta_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
</navigation>