<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/lvpedidoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_toEndOf="@id/ivImagen"
            android:layout_toRightOf="@+id/ivImagen"
            android:text="@string/nombremedicamento"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/medica_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvpedidoid"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@+id/ivImagen"
            android:layout_toRightOf="@id/ivImagen"
            android:text="@string/comprimidos" />

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="92dp"
            android:layout_height="147dp"
            android:layout_marginStart="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/preciolv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medica_lv"
            android:layout_marginStart="8dp"
            android:layout_marginTop="21dp"
            android:layout_toEndOf="@+id/textView4"
            android:text="@string/precio"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medica_lv"
            android:layout_marginStart="15dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/ivImagen"
            android:textSize="20sp"
            android:text="$" />

        <TextView
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvpedidoid"
            android:layout_marginStart="6dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@+id/medica_lv"
            android:text="mg" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_below="@+id/lvpedidoid"
            android:layout_marginStart="73dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/peso"
            app:srcCompat="@drawable/shopping" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_marginStart="58dp"
            android:layout_marginTop="11dp"
            android:padding="3sp"
            android:textStyle="bold"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:textAlignment="center"
            android:layout_toEndOf="@+id/preciolv"
            android:background="@color/rosa_500"
            android:visibility="visible"
            android:text="Bajo receta" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>