<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.DetalleMedicamento"
    android:background="#EEEEEE">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imagen_medicamento"
                android:layout_width="386dp"
                android:layout_height="241dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_gallery"
                android:visibility="visible" />

            <TextView
                android:id="@+id/nombre_medicamento"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:text="@string/nombremedicamento"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="Comprimido:  "
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txComprimido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="comprimido"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=" Mg."
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="$  "
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/precio_medicamento"
                    android:layout_width="304dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/precio"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/menos"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/button_onoff_indicator_on" />

                <EditText
                    android:id="@+id/cantidad_medicamento"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/mas"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:text="@string/total"
                    android:textAlignment="viewEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/preciototal_medicamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="$ 0.00"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <ImageButton
                android:id="@+id/agregar_medicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:src="@drawable/shopping" />

            <TextView
                android:id="@+id/medicamento_id"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0"
                tools:visibility="invisible" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>